2009-04-02  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_class_init): Modified the default value of
	the overshooting max speed, we have reduced it.

2009-04-02  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon-sections.txt
	* src/hildon-window-private.h
	* src/hildon-window.h
	* src/hildon-window.c (hildon_window_class_init)
	(hildon_window_init, hildon_window_finalize)
	(hildon_window_realize, hildon_window_get_property)
	(hildon_window_set_property, hildon_window_update_markup)
	(hildon_window_get_markup, hildon_window_set_markup):
	New "markup" property and hildon_window_{get,set}_markup() methods.

	* examples/hildon-stackable-window-example.c (new_window):
	Update example to use hildon_window_set_markup()

	Fixes: NB#106375 (Need API to retitle a window with a title
	including markup)

2009-04-01  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_class_init): Changed the default value of
	the initial_hint to TRUE.
	(hildon_pannable_area_initial_effect): Changed the initial effect,
	not the effect is just the fade-out of the scrollbars.

	Fixes: NB#107775 (No scrollbars can be seen when several items are
	available in a dialog)

2009-04-01  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-program.c (hildon_program_update_top_most):
	Fix memory leak.

	Fixes: NB#109179 (Memory leak in Hildon program)

2009-04-01  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-banner.c (-get_current_app_window):
	Remove unused function.

2009-04-01  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c: Modified the documentation of the
	get adjustments functions to explain the problem of using the
	adjustment directly.
	(hildon_pannable_area_class_init): Improved the explanation about
	the velocity.

2009-04-01  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu-private.h
	* src/hildon-app-menu.c
	(hildon_app_menu_class_init):